--- a/_posts/2023-09-01-python命名规范.md
+++ b/_posts/2023-09-01-python命名规范.md
@@ -13,26 +13,26 @@ tags: [命名规范,python]
 
 ### 模块
 
-- 全小写+下划线式驼峰 *example：my_module
+- 全小写+下划线式驼峰 *example：my_module*
 
 ### 包
 
-- 全小写+下划线式驼峰 *example: my_package
+- 全小写+下划线式驼峰 *example: my_package*
 
 ### 类
 
-- 首字母大写式驼峰 *example: MyClass
-- 内部类可以使用额外的前导下划线 *example: _PrivateClass
+- 首字母大写式驼峰 *example: MyClass*
+- 内部类可以使用额外的前导下划线 *example: _PrivateClass*
 
 ### 函数/方法
 
-- 全小写+下划线式驼峰 *example: my_function
-- 私有函数可用前导下划线 *example: _private_func
+- 全小写+下划线式驼峰 *example: my_function*
+- 私有函数可用前导下划线 *example: _private_func*
 
 ### 变量
 
-- 变量名一般小写，多个单词用_下划线隔开，同函数命名 *example: my_var
-- 私有类成员使用单一下划线前缀标识 *example: _private_var
+- 变量名一般小写，多个单词用_下划线隔开，同函数命名 *example: my_var*
+- 私有类成员使用单一下划线前缀标识 *example: _private_var*
 - 变量名不应该带有类型信息，如 *num_list* , *ani_dict* 等,因为Python是动态类型语言，在解释的时候才确定类型。
 
 ### 全局变量/常量
@@ -42,14 +42,14 @@ tags: [命名规范,python]
 
 ### 异常
 
-- 类似类的命名方法，名称一般以 *Error* 做后缀 *example:ValueError
+- 类似类的命名方法，名称一般以 *Error* 做后缀 *example:ValueError*
 
 ### 下划线的用法
 
 - 一个前导下划线：表示非公有
 - 一个后缀下划线：避免关键字冲突
 - 两个前导下划线：当命名一个类属性引起名称冲突时使用
-- 两个前导和后缀下划线：有特殊用途的对象或者属性，例如___init____和____str___
+- 两个前导和后缀下划线：有特殊用途的对象或者属性，例如__init__和__str__
 
 ### 参考资料
 
