--- a/_posts/2023-07-30-markdown语法.md
+++ b/_posts/2023-07-30-markdown语法.md
@@ -88,7 +88,7 @@ tags: [语言学习,markdown]
 ```markdown
 # 插入图片
 
-![示例图片](https://s1.ax1x.com/2023/07/31/pP9Q4vd.jpg)
+![示例图片](/assets/images/home.jpg)
 ```
 
 # 文字链接
