--- a/_posts/2023-09-03-计算机网络和因特网1.3.md
+++ b/_posts/2023-09-03-计算机网络和因特网1.3.md
@@ -23,7 +23,7 @@ tags: [笔记,计网]
 
 >网络资源（如带宽）被分成片，为呼叫分配片，根据分片方式分为频分复用（FDM），时分复用（TDM），波分复用（WDM）等。
 
-![电路交换中的复用](https://s1.ax1x.com/2023/09/03/pPDtQw8.png)
+![电路交换中的复用](/assets/images/Snipaste_2023-09-03_17-25-27.png)
 
 ### 电路交换的特性
 
@@ -77,7 +77,7 @@ tags: [笔记,计网]
 
 ### 虚电路的工作原理
 
-![虚电路的工作原理](https://s1.ax1x.com/2023/09/03/pPDU2dK.png)
+![虚电路的工作原理](/assets/images/Snipaste_2023-09-03_18-43-07.png)
 
 ## 分组交换 VS 电路交换
 ---
