更新了博客

--- a/_posts/2023-09-03-计算机网络和因特网1.3.md
+++ b/_posts/2023-09-03-计算机网络和因特网1.3.md
@@ -44,7 +44,7 @@ tags: [笔记,计网]
 
 ### 分组交换的特性
 
-> 资源共享，按需使用
+- 资源共享，按需使用。网络核心中每个交换结点均为共享结点
 
 -  存储转发：分组每次移动一跳（hop）
 	- 在转发之前，节点必须收到整个分组
@@ -54,6 +54,8 @@ tags: [笔记,计网]
 - 排队延迟和丢失：如果到达速率>链路的输出速率：
 	- 分组将会排队，等待传输
 	- 如果路由器的缓存用完了，分组将会被丢弃（队排满）
+
+- 各节点具有选择合适路由的能力
 
 ### 分组交换的分类
 
@@ -83,13 +85,17 @@ tags: [笔记,计网]
 ---
 
 - 同样的网络资源，分组交换允许更多的用户使用网络
+- 当用户数较少时，分组交换能够获得比电路交换更好的性能
 - 分组交换更适合于突发式数据传输
 	- 资源共享
 	- 简单，不必建立呼叫
 - 分组交换过度使用会造成网络拥塞：分组延迟和丢失。此时需要协议来约束（拥塞控制）
+- 各分组必须携带一定的控制信息（说明信息），从而带来额外开销
+- 整个分组交换网的管理和控制比较复杂
 
 ## 网络核心的关键功能
 ---
 
+> 将数据从一个网络传输到远方的另一个网络
 - 路由：决定分组采用的源到目标的路径
 - 转发：将分组从路由器的输入链路转移到输出链路
