修正了博客格式

--- a/_posts/2023-09-04-计算机网络和因特网1.4.md
+++ b/_posts/2023-09-04-计算机网络和因特网1.4.md
@@ -77,7 +77,6 @@ tags: [笔记,计网]
 ### 介质分类
 
 - 导引型介质：信号沿着固体媒体被导引
-
 	- 双绞线：比如传统的电话线
 	- 同轴电缆：比如电视信号线
 	- 光缆：单模光纤和双模光纤
@@ -98,9 +97,9 @@ tags: [笔记,计网]
 
 ### 光缆
 
-在玻璃光纤传播光脉冲，每一个脉冲一比特
-高速运行：高速的点到点传输 (如10 Gbps)
-低误码率：中继器相隔很远； 不受电磁干扰
+- 在玻璃光纤传播光脉冲，每一个脉冲一比特
+- 高速运行：高速的点到点传输 (如10 Gbps)
+- 低误码率：中继器相隔很远； 不受电磁干扰
 
 ### 无线电波
 
