博客格式修改

--- a/_posts/2023-09-08-计算机网络和因特网1.5.md
+++ b/_posts/2023-09-08-计算机网络和因特网1.5.md
@@ -28,7 +28,7 @@ tags: [笔记,计网]
 - 很多内容提供商（ICP）可能会部署自己的网络，连接自己的在各地的DC（数据中心），走自己的数据
 	- 连接若干local ISP和各级（包括一层）ISP，更加靠近用户
 
-- 下面这个图片大致体现了互联网的层次结构![[Snipaste_2023-09-08_16-18-25.png]]
+- 下面这个图片大致体现了互联网的层次结构![互联网层次结构](/assets/images/Snipaste_2023-09-08_16-18-25.png)
 	- IXP（*Internet Exchange Point*）因特网交换点
 
 ### ISP之间的连接
