--- a/_posts/2023-09-08-计算机网络和因特网1.6.md
+++ b/_posts/2023-09-08-计算机网络和因特网1.6.md
@@ -36,7 +36,7 @@ tags: [笔记,计网]
 ### 节点延时：
 
 $$
-d_{nodal}=d_{proc}+d_{queue}+d_{trans}+d_{prop}
+d_{nodal} = d_{proc} + d_{queue} + d_{trans} + d_{prop}
 $$
 - $d_{proc}$=处理延时
 	- 通常是微秒数量级或更少
@@ -77,6 +77,6 @@ $$
 	- "木桶效应"
 
 - 互联网场景
- ![[Snipaste_2023-09-08_22-01-57.png]]
+ ![吞吐量的互联网场景](/assets/images/Snipaste_2023-09-08_22-01-57.png)
 	 - 每个连接的端到端吞吐量=$\mit{min}${$R_c,R_s,R/10$}
 	 - 实际上，$R_c$或者$R_s$通常是瓶颈所在
