修正了博客格式

--- a/_posts/2023-09-08-计算机网络和因特网1.6.md
+++ b/_posts/2023-09-08-计算机网络和因特网1.6.md
@@ -35,9 +35,8 @@ tags: [笔记,计网]
 
 ### 节点延时：
 
-$$
-d_{nodal} = d_{proc} + d_{queue} + d_{trans} + d_{prop}
-$$
+$$d_{nodal} = d_{proc} + d_{queue} + d_{trans} + d_{prop}$$
+
 - $d_{proc}$=处理延时
 	- 通常是微秒数量级或更少
 - $d_{queue}$=排队延时
