博客格式修改

--- a/_posts/2023-09-14-应用层2.2.md
+++ b/_posts/2023-09-14-应用层2.2.md
@@ -16,7 +16,8 @@ tags: [笔记,计网]
 - Web页含有一个基本的HTML文件，该基本HTML文件又包含若干对象的引用
 - 通过URL对每个对象进行引用
 - URL格式：
- $$\underbrace{Prot}_{协议名}://\underbrace{user:psw}_{用户：口令}@\underbrace{www.someSchool.edu}_{主机名}:\underbrace{port}_{端口}/\underbrace{someDept/pic.gif}_{路径名}$$
+
+![URL格式](assets/images/Snipaste_2023-09-14_23-43-19.png)
 
 ### HTTP概况
 
