修改博客格式

--- a/_posts/2023-09-15-应用层2.4.md
+++ b/_posts/2023-09-15-应用层2.4.md
@@ -73,20 +73,22 @@ tags: [笔记,计网]
  
 ### 邮件访问协议
 
-```mermaid
-graph
-A[用户代理]-->|SMTP|B[发送方邮件服务器]-->|SMTP|C[接收方邮件服务器]-->|"POP3、IMAP、HTTP"|D[用户代理]
+```mermaid!
+graph TD
+A[用户代理]-->|SMTP|B[发送方邮件服务器]
+B-->|SMTP|C[接收方邮件服务器]
+C-->|"POP3、IMAP、HTTP"|D[用户代理]
 ```
 
 - SMTP：传送到接收方的邮件服务器
 - 邮件访问协议：从服务器访问邮件
-		- POP[^2]：RFC 1939
-			- 用户身份确认并下载
-		- IMAP[^3]：RFC 1730
-			- 更多特性（更复杂）
-			- 在服务器上处理存储的报文
-		- HTTP：*Hotmail*，*Yahoo! Mail*
-			- 方便
+	- POP[^2]：RFC 1939
+		- 用户身份确认并下载
+	- IMAP[^3]：RFC 1730
+		- 更多特性（更复杂）
+		- 在服务器上处理存储的报文
+	- HTTP：*Hotmail*，*Yahoo! Mail*
+		-  方便
 
 - POP3 协议
 	- 用户确认阶段：
