更新了博客

--- a/_posts/2023-09-14-应用层2.2.md
+++ b/_posts/2023-09-14-应用层2.2.md
@@ -96,6 +96,8 @@ tags: [笔记,计网]
 				- 将实体主体中的文件上载到URL字段规定的路径
 			- DELETE
 				- 删除URL字段规定的文件
+	- 为什么请求报文中会包含浏览器类型？
+		- 服务器需要浏览器类型信息将同一对象的不同版本发送到不同类型的浏览器。
 - **HTTP响应报文**
 	- 例: ![响应报文](/assets/images/Snipaste_2023-09-14_22-46-13.png)
 	- HTTP响应状态码：位于服务器-> 客户端的响应报文的首行。例：
