--- a/_posts/2023-09-16-应用层2.5.md
+++ b/_posts/2023-09-16-应用层2.5.md
@@ -127,13 +127,13 @@ tags: [笔记,计网]
 - 迭代查询
 	- 根（及各级域名）服务器返回的不是查询结果，而是下一个DNS服务器的地址
 	- 最后由权威DNS服务器给出解析结果
-![迭代查询](Snipaste_2023-09-16_20-49-18.png)
+![迭代查询](/assets/images/Snipaste_2023-09-16_20-49-18.png)
 
 ### DNS协议、报文
 
 - **DNS协议**：查询和响应报文的报文格式相同
-![](Snipaste_2023-09-16_20-54-44.png)
-![](Snipaste_2023-09-16_20-55-07.png)
+![DNS报文](/assets/images/Snipaste_2023-09-16_20-54-44.png)
+![DNS报文](/assets/images/Snipaste_2023-09-16_20-55-07.png)
 
 ### DNS维护问题
 
