--- a/_posts/2023-09-18-应用层2.6.md
+++ b/_posts/2023-09-18-应用层2.6.md
@@ -26,7 +26,10 @@ tags: [笔记,计网]
 	- **客户端**：每个客户端必须下载一个文件拷贝
 		- 将客户端最小的下载速率记为$d_{min}$
 		- 下载带宽最小的客户端下载的时间：$F/d_{min}$
-	- 将一个F大小的文件分发给N个客户端耗时：$$D_{c/s}\geq max\{NF/u_s,F/d_{min}\}$$
+	- 将一个F大小的文件分发给N个客户端耗时：
+$$
+D_{c/s}\geq max\{NF/u_s,F/d_{min}\}
+$$
 - **P2P模式**：
 	- **服务器传输**：最少需要上载一份拷贝
 		- 发送一个拷贝：$F/u_s$
@@ -35,7 +38,10 @@ tags: [笔记,计网]
 	- **客户端**：所有客户端的总体下载量为NF
 		- 最大上载带宽为：$u_s+\sum u_i$
 		- 除了服务器可以上载，其他所有peer节点都可以上载
-	- 将一个F大小的文件分发给N个客户端耗时：$$D_{P2P}\geq max\{F/u_s,F/d_{min},NF/(u_s+\sum u_i\}$$
+	- 将一个F大小的文件分发给N个客户端耗时：
+$$
+D_{P2P}\geq max\{F/u_s,F/d_{min},NF/(u_s+\sum u_i\}
+$$
 - **比较结果**：
 	- 随着N的增大，C/S模式的耗时线性增长，而P2P模式耗时增长较慢![C/S vs P2P](/assets/images/Snipaste_2023-09-18_21-23-52.png)
 
