--- a/_posts/2023-09-22-并查集.md
+++ b/_posts/2023-09-22-并查集.md
@@ -150,8 +150,8 @@ public class QuickUnionUF
 
 | 算法|初始化|并|查|说明|
 |:---|:---|:---|:---|:-|
-|快速查找|N|N|1||
-|快速连接|N|N$|N| 最差情况
+|快速查找|N|N|1|无|
+|快速连接|N|N$|N| 最差情况|
 - "$"号表示包括了查找根的时间
 
 - 仍然很慢：
