--- a/_posts/2023-09-25-应用层2.8.md
+++ b/_posts/2023-09-25-应用层2.8.md
@@ -24,7 +24,7 @@ tags: [笔记,计网]
 ### 流程
 
 1. 服务器首先运行，等待连接建立
-	1. 创建**欢迎socket**
+	1. 创建**欢迎socket** （也叫监听socket）
 	2. 和本地端口捆绑
 	3. 在欢迎socket上阻塞式等待接收用户的连接
 		- 只有接受了用户的连接才会进行下一步
@@ -57,7 +57,7 @@ tags: [笔记,计网]
 	- IP地址和port捆绑关系的数据结构（标示进程的端节点）
 ```CPP
 struct sockaddr_in {
-  short sin_family; //地址簇
+  short sin_family; //通信类型
   unsigned short sin_port; // 端口
   struct in_addr sin_addr;
   // IP地址
@@ -71,7 +71,7 @@ struct sockaddr_in {
 struct hostent
 {
   char* h_name;//主机域名
-  char** h_aliases;//主机别名簇
+  char** h_aliases;//主机别名族
   int h_addrtype;
   int h_length; //地址长度
   char** h_addr_list;//IP地址列表
@@ -91,7 +91,7 @@ void main(int argc, char* argv[])
   host = argv[1]; port = atoi(argv[2]);
   clientSocket = socket(PF_INET, SOCK_STREAM, 0);
   memset((char*)&sad, 0, sizeof(sad)); /* 清理空间，置为0 */
-  sad.sin_family = AF_INET; /*设定地址簇 */
+  sad.sin_family = AF_INET; /*设定通信类型为IPV4 */
   sad.sin_port = htons((u_short)port);
   ptrh = gethostbyname(host);
   /*将域名转换为IP */
@@ -118,7 +118,7 @@ void main(int argc, char* argv[])
   port = atoi(argv[1]);
   welcomeSocket = socket(PF_INET, SOCK_STREAM, 0);
   memset((char*)&sad, 0, sizeof(sad)); /*清理空间，置为0*/
-  sad.sin_family = AF_INET; /* 设定地址簇*/
+  sad.sin_family = AF_INET; /* 设定通信类型为IPV4*/
   sad.sin_addr.s_addr = INADDR_ANY; /* 设定本地IP地址 */
   sad.sin_port = htons((u_short)port);/* 设定端口号 */
   bind(welcomeSocket, (struct sockaddr*)&sad, sizeof(sad));
