--- a/_posts/2023-09-22-并查集.md
+++ b/_posts/2023-09-22-并查集.md
@@ -148,10 +148,10 @@ public class QuickUnionUF
 
 ### 时间复杂度分析
 
-| 算法|初始化|并|查|说明|
-|:---|:---|:---|:---|:---|
-|快速查找|N|N|1|无|
-|快速连接|N|N$|N| 最差情况|
+|算法|初始化|并|查|
+|:---|:---|:---|:---|
+|快速查找|N|N|1|
+|快速连接|N|N$|N|
 
 - "$"号表示包括了查找根的时间
 
