--- a/_posts/2023-10-11-传输层3.2.md
+++ b/_posts/2023-10-11-传输层3.2.md
@@ -4,9 +4,7 @@ title: 3.2 多路复用与解复用
 subtitle: 计网笔记
 author: NightSheep
 categories: 计网笔记
-tags:
-  - 笔记
-  - 计网
+tags: [笔记,计网]
 ---
 ## 多路复用与解复用
 ---
