--- a/_posts/2023-09-22-并查集.md
+++ b/_posts/2023-09-22-并查集.md
@@ -3,10 +3,11 @@ layout: post
 title: 并查集
 subtitle: java语言实现
 author: NightSheep
-categories: 数据结构与算法
+categories: 算法笔记
 tags: [笔记,数据结构,JAVA]
 ---
 ## 概论
+
 ---
 ### 定义
 
@@ -107,7 +108,7 @@ public class QuickFindUF
 - `id[i]`是`i`的父节点
 - `i`的根节点为 `id[id[id[...id[i]...]]]`
 	- 直到id值不改变为止
-![示例](/assets/images/Snipaste_2023-09-22_22-48-01.png)
+	![示例](/assets/images/Snipaste_2023-09-22_22-48-01.png)
 
 ### ”查“操作
 
