--- a/_posts/2024-06-03-排序.md
+++ b/_posts/2024-06-03-排序.md
@@ -29,11 +29,11 @@ void quick_sort(int q[],int l,int r){
     if(l >= r) return;
     int i = l - 1; j = r + 1; x = q[l + r >>1];
     while(i<j){
-        do i++; while (q[i]<=x);
+        do i++; while (q[i]<x);
         do j--; while (q[j]>=x);
         if(i<j) swap(q[i],q[j]);
     }
-    quick_sort(q,l,j),quicK_sort(q,j+1,r);
+    quick_sort(q,l,j),quick_sort(q,j+1,r);
 }
 ```
 
@@ -67,7 +67,7 @@ void merge_sort(int q[],int l,int r){
     }
     while(i <= mid) tmp[k++] = q[i++];
     while(j <= r) tmp[k++] = q[j++];
-    for(int i=l,j=0;i<=r;i++,j++) q[i] = tmp[]
+    for(int i=l,j=0;i<=r;i++,j++) q[i] = tmp[j];
 }
 ```
 
