--- a/_posts/2024-06-06-离散化.md
+++ b/_posts/2024-06-06-离散化.md
@@ -45,3 +45,10 @@ int find(int x) // 找到第一个大于等于x的位置
 }
 ```
 
+## 例题
+
+---
+
+[802. 区间和 - AcWing题库](https://www.acwing.com/problem/content/804/)
+
+![8021.png](https://cdn.acwing.com/media/article/image/2020/05/22/38626_05e3618e9b-8021.png)
