--- a/_posts/2024-06-07-区间合并.md
+++ b/_posts/2024-06-07-区间合并.md
@@ -18,7 +18,7 @@ tags: [笔记,算法,c++]
 ### 思路
 
 1. 按区间左端点进行排序
-2. 依此遍历，并更新区间边界。在两个区间无交集时则当前区间合并完毕，进行下一个区间的合并
+2. 依次遍历，并更新区间边界。在两个区间无交集时则当前区间合并完毕，进行下一个区间的合并
 3. 贪心的过程
 
 
@@ -43,7 +43,7 @@ void merge(vector<PII> &segs){
         }
     }
     if(start != -2e9) res.push_back({start,end});
-    s
+    
 }
 ```
 
