--- a/_posts/2024-09-07-最短路.md
+++ b/_posts/2024-09-07-最短路.md
@@ -133,11 +133,13 @@ n代表图的点数，m代表图的边数，当m与$n^2$同数量级时看作稠
          // 如果第n次迭代仍然会松弛三角不等式，就说明存在一条长度是n+1的最短路径，由抽屉原理，路径中至少存在两个相同的点，说明图中存在负权回路。
          for (int i = 0; i < n; i ++ )
          {
+             int back[N];
+             memcpy(back,dist,sizeof dist);//需要备份上一次迭代的结果，避免前一次松弛的结果影响后一次松弛的结果。
              for (int j = 0; j < m; j ++ )
              {
                  int a = edges[j].a, b = edges[j].b, w = edges[j].w;
-                 if (dist[b] > dist[a] + w)
-                     dist[b] = dist[a] + w;
+                 if (dist[b] > back[a] + w)
+                     dist[b] = back[a] + w;
              }
          }
      
@@ -145,7 +147,7 @@ n代表图的点数，m代表图的边数，当m与$n^2$同数量级时看作稠
          return dist[n];
      }
      ```
-
+     
      
 
 2. SPFA算法
@@ -197,7 +199,78 @@ n代表图的点数，m代表图的边数，当m与$n^2$同数量级时看作稠
      }
      ```
 
-     
+
+- spfa判负环
+
+  ```cpp
+  #include <bits/stdc++.h>
+  
+  using namespace std;
+  
+  const int N = 1e5;
+  int h[N], e[N], ne[N], w[N], idx;
+  int dist[N];
+  int cnt[N];
+  bool st[N];
+  void add(int x, int y, int z)
+  {
+      e[idx] = y;
+      w[idx] = z;
+      ne[idx] = h[x];
+      h[x] = idx++;
+  }
+  bool spfa(int n)
+  {//w
+      queue<int> q;
+      for(int i=1;i<=n;i++){
+          q.push(i);
+          st[i] = true;
+      }//加入所有点
+      while (q.size())
+      {
+          int t = q.front();
+          q.pop();
+          st[t] = false;
+          for (int i = h[t]; i != -1; i = ne[i])
+          {
+              int j = e[i];
+              if (dist[j] > dist[t] + w[i])
+              {
+                  dist[j] = dist[t] + w[i];
+                  cnt[j] = cnt[t] + 1;
+                  if(cnt[j]>=n) return true;
+                  if (!st[j])
+                  {
+                      q.push(j);
+                      st[j] = true;
+                  }
+              }
+          }
+      }
+      return false;
+  }
+  int main()
+  {
+      {
+          ios::sync_with_stdio(false);
+          cin.tie(NULL), cout.tie(NULL);
+      }
+      int n, m;
+      cin >> n >> m;
+      memset(h,-1,sizeof h);
+      while (m--)
+      {
+          int x, y, z;
+          cin >> x >> y >> z;
+          add(x, y, z);
+      }
+      if(spfa(n)) cout<<"Yes"<<endl;
+      else cout<<"No"<<endl;
+      return 0;
+  }
+  ```
+
+  
 
 ## 多源汇最短路算法
 
