--- a/_posts/2024-09-08-二分图.md
+++ b/_posts/2024-09-08-二分图.md
@@ -66,7 +66,7 @@ tags: [笔记,图论,c++]
   int n1, n2;     // n1表示第一个集合中的点数，n2表示第二个集合中的点数
   int h[N], e[M], ne[M], idx;     // 邻接表存储所有边，匈牙利算法中只会用到从第一个集合指向第二个集合的边，所以这里只用存一个方向的边
   int match[N];       // 存储第二个集合中的每个点当前匹配的第一个集合中的点是哪个
-  bool st[N];     // 表示第二个集合中的每个点是否已经被遍历过
+  bool st[N];     // 表示第二个集合中的每个点是否已经被遍历过（临时）
   
   bool find(int x)
   {
