--- a/_posts/2024-09-11-数论.md
+++ b/_posts/2024-09-11-数论.md
@@ -243,7 +243,7 @@ int exgcd(int a, int b, int &x, int &y)
     }
     int d = exgcd(b, a % b, y, x);
     y -= (a/b) * x;
-    return d;
+    return d;//返回的d是a和b的最大公约数
 }
 ```
 
@@ -251,11 +251,11 @@ int exgcd(int a, int b, int &x, int &y)
 
 
 
-### 中国剩余定理
+## 中国剩余定理
 
 ---
 
-- 中国剩余定理可以解决如下形式的一元线性同余方程组，其中 $m_1,m_2,\dots,m_k$是两两互质的正整数,$a_1,a_2,\dots,a_k$是相应的余数：
+- 中国剩余定理可以解决如下形式的一元线性同余方程组，其中 $m_1,m_2,\dots,m_k$是两两互质的正整数,$a_1,a_2,\dots,a_k$是相应的余数：  
   $$
   x \equiv a_1 \pmod {m_1}\\
   x \equiv a_2 \pmod {m_2}\\
@@ -265,5 +265,5 @@ int exgcd(int a, int b, int &x, int &y)
 
 - 求解过程
   1. **计算模数的乘积**：计算所有模数 $m_1,m_2,\dots,m_k$的乘积 $M$
-  2. **计算每个方程的系数**：对于每个方程，计算 $M_i = \frac{M}{i}$，然后找到$M_i$在模$m_i$意义下的逆元$M_i^{-1}$。
+  2. **计算每个方程的系数**：对于每个方程，计算 $M_i = \frac{M}{m_i}$，然后找到$M_i$在模$m_i$意义下的逆元$M_i^{-1}$。
   3. **计算解**：$x \equiv (a_1M_1M_1^{-1}+a_2M_2M_2^{-1}+\cdots +a_kM_kM_k^{-1})\pmod M$
