--- a/_posts/2024-09-18-背包问题.md
+++ b/_posts/2024-09-18-背包问题.md
@@ -16,7 +16,7 @@ tags: [笔记,动态规划,c++]
   - 该状态的值代表的是集合的什么属性？
 - 状态计算
   - 即集合划分
-    - 要求不重不漏
+    - 要求不重不漏(最值问题可以重复)
 
 ## 01背包
 
@@ -46,10 +46,35 @@ tags: [笔记,动态规划,c++]
 ---
 
 - 每种物品有$S_i$个
+
 - 状态 $f[i][j]$:前i种物品，背包容量j下的最大价值
+
 - 朴素的DP：$f[i] [j] = max( f[i-1][j] , f[i - 1][j - v[i]]+w[i] , f[i - 1][j - 2 * v[i]] + 2 * w[i] , f[i - 1][j - k * v[i]] + k * w[i],\dots)$ 
   - 与完全背包类似，但由于项数不同，无法采用相同的优化方式
-- 二进制优化
+  
+- 二进制优化,优化之后就是一个01背包问题
+
+  ```CPP
+   for(int i=1;i<=n;i++){
+          int a,b,s;
+          cin>>a>>b>>s;
+          int k = 1;
+          while(k<=s) {
+              cnt ++;
+              v[cnt] = a*k;
+              w[cnt] = b*k;
+              s-=k;
+              k*=2;
+          }
+          if(s>0){
+              cnt ++;
+              v[cnt] = a*s;
+              w[cnt] = b*s;
+          }
+      }
+  ```
+
+  
 
 ## 分组背包
 
